--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,9 +1,10 @@
 project:
   type: book
+  output-dir: docs
 
 book:
-  title: "rs-learning-diary"
-  author: "Norah Jones"
+  title: "Viewed from Above: A Learning Diary"
+  author: "The-Huan Hoang"
   date: "16/01/2024"
   chapters:
     - index.qmd
@@ -20,4 +21,3 @@ format:
     documentclass: scrreprt
 
 editor: visual
-
