--- a/_quarto.yml
+++ b/_quarto.yml
@@ -9,7 +9,13 @@ book:
   chapters:
     - index.qmd
     - week1.qmd
-    - summary.qmd
+    # - week2.qmd
+    # - week3.qmd
+    # - week4.qmd
+    # - week5.qmd
+    # - week6.qmd
+    # - week7.qmd
+    # - week8.qmd
     - references.qmd
 
 bibliography: references.bib
