--- a/_quarto.yml
+++ b/_quarto.yml
@@ -29,10 +29,12 @@ book:
           - week1.qmd
           - week2.qmd
           - week3.qmd
+    - part: "**Policy applications**"
+      chapters:
+          - week4.qmd
+          # - week5.qmd
     # - part: "**Google Earth Engine**"
     #   chapters:
-            # - week4.qmd
-            # - week5.qmd
             # - week6.qmd
             # - week7.qmd
             # - week8.qmd
