--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,7 +3,7 @@ project:
   output-dir: docs
 
 book:
-  title: "Viewed from Above: An Learning Diary on Earth Observation"
+  title: "Viewed from Above: An Learning Diary on Remote Sensing & Earth Observation"
   author: "The-Huan Hoang"
   favicon: "images/planet-earth.png"
   navbar:
@@ -29,15 +29,15 @@ book:
           - week1.qmd
           - week2.qmd
           - week3.qmd
-    - part: "**Policy applications**"
-      chapters:
-          - week4.qmd
+    # - part: "**Policy applications**"
+    #   chapters:
+          # - week4.qmd
           # - week5.qmd
     # - part: "**Google Earth Engine**"
     #   chapters:
-            # - week6.qmd
-            # - week7.qmd
-            # - week8.qmd
+          # - week6.qmd
+          # - week7.qmd
+          # - week8.qmd
     - part: "**Resources**"
       chapters:
           - glossary.qmd
